<resources>
    <string name="app_name">Calculator</string>
    <string name="app_std">Standard Calculator</string>
    <string name="app_sct">Scientific Calculator</string>
    <string name="app_stdhelp">Standard Calculator Help</string>
    <string name="app_scthelp">Scientific Calculator Help</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="mode">Mode</string>
    <string name="help">Help</string>
    <string name="cancel">C</string>
    <string name="back">Back</string>
    <string name="ac">AC</string>

    <string name="MP">M+</string>
    <string name="MC">MC</string>
    <string name="MS">MS</string>

    <string name="CE">CE</string>
    <string name="C">C</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="multiply">x</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
    <string name="percent">%</string>
    <string name="sqrt">√</string>

    <string name="x2">x^2</string>
    <string name="xy">x^y</string>
    <string name="x10">10^x</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>
    <string name="Pi">π</string>
    <string name="mod">mod</string>
</resources>
