<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"

    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:stretchColumns="0, 1, 2, 3"
    tools:context="com.example.acer.assignmentcalculator.PortraitActivity">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/outputView"

            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_span="4"
            android:background="@color/softblue"

            android:gravity="right"
            android:text="@string/zero"
            android:textSize="70sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonMP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softgreen"

            android:contentDescription="@string/MP"
            android:minHeight="60dip"
            android:onClick="goMP"
            android:text="@string/MP"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softgreen"

            android:contentDescription="@string/MS"
            android:minHeight="60dip"
            android:onClick="goMS"
            android:text="@string/MS"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softgreen"

            android:contentDescription="@string/MC"
            android:minHeight="60dip"
            android:onClick="goMC"
            android:text="@string/MC"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softgrey"

            android:contentDescription="@string/mode"
            android:minHeight="60dip"
            android:onClick="goToScientific"
            android:text="@string/mode"

            android:textAppearance="?android:attr/textAppearanceLarge" />


    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softred"

            android:contentDescription="@string/CE"
            android:minHeight="60dip"
            android:onClick="goCE"
            android:text="@string/CE"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softred"

            android:contentDescription="@string/C"
            android:minHeight="60dip"
            android:onClick="goC"
            android:text="@string/C"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonSqrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softred"

            android:contentDescription="@string/sqrt"
            android:minHeight="60dip"
            android:onClick="goSqrt"
            android:text="@string/sqrt"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softred"

            android:contentDescription="@string/divide"
            android:minHeight="60dip"
            android:onClick="goOperator"
            android:text="@string/divide"

            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softyellow"

            android:contentDescription="@string/seven"
            android:minHeight="60dip"
            android:onClick="goOperand"
            android:text="@string/seven"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softyellow"

            android:contentDescription="@string/eight"
            android:minHeight="60dip"
            android:onClick="goOperand"
            android:text="@string/eight"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softyellow"

            android:contentDescription="@string/nine"
            android:minHeight="60dip"
            android:onClick="goOperand"
            android:text="@string/nine"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softred"

            android:contentDescription="@string/multiply"
            android:minHeight="60dip"
            android:onClick="goOperator"
            android:text="@string/multiply"

            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softyellow"

            android:contentDescription="@string/four"
            android:minHeight="60dip"
            android:onClick="goOperand"
            android:text="@string/four"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softyellow"

            android:contentDescription="@string/five"
            android:minHeight="60dip"
            android:onClick="goOperand"
            android:text="@string/five"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softyellow"

            android:contentDescription="@string/six"
            android:minHeight="60dip"
            android:onClick="goOperand"
            android:text="@string/six"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softred"

            android:contentDescription="@string/subtract"
            android:minHeight="60dip"
            android:onClick="goOperator"
            android:text="@string/subtract"

            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softyellow"

            android:contentDescription="@string/one"
            android:minHeight="60dip"
            android:onClick="goOperand"
            android:text="@string/one"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softyellow"

            android:contentDescription="@string/two"
            android:minHeight="60dip"
            android:onClick="goOperand"
            android:text="@string/two"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softyellow"

            android:contentDescription="@string/three"
            android:minHeight="60dip"
            android:onClick="goOperand"
            android:text="@string/three"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softred"

            android:contentDescription="@string/add"
            android:minHeight="60dip"
            android:onClick="goOperator"
            android:text="@string/add"

            android:textAppearance="?android:attr/textAppearanceLarge" />


    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softgrey"

            android:contentDescription="@string/help"
            android:minHeight="60dip"
            android:onClick="goHelp"
            android:text="@string/help"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/softyellow"

            android:contentDescription="@string/zero"
            android:minHeight="60dip"
            android:onClick="goOperand"
            android:text="@string/zero"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonCompute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="@color/softred"

            android:contentDescription="@string/equal"
            android:minHeight="60dip"
            android:onClick="goCompute"
            android:text="@string/equal"

            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

</TableLayout>

